Fix layout shift issue

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -7,6 +7,7 @@ body {
   @apply bg-background-main font-open-sans text-type-text;
   min-height: 100vh;
   min-height: 100dvh;
+  scrollbar-gutter: stable;
 }
 
 html[data-full],
